<resources>
    <!--    <string name="app_name">Калькулятор возраста</string>-->
    <string name="app_name">Friends</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
    <string name="hide_zeros">Hide leading zeros</string>

    <string name="error_save">File save error</string>
    <string name="file_save">File saved</string>
    <string name="error_open">File opening error</string>
    <string name="delete">Delete</string>
    <string name="mess1">Are you sure you want to delete the entry</string>
    <string name="mess2">Are you sure you want to delete entries</string>
    <string name="cancel">Cancel</string>
    <string name="file_copy">File copied</string>
    <string name="error_copy">Copy error</string>
    <string name="error_save_image">Image save error</string>


    <!-- DialogAdd -->
    <string name="edit">Edit entry</string>
    <string name="add">Add a entry</string>
    <string name="select_photo">Select\n photo</string>
    <string name="d_m_y">dd-mm-yyyy</string>
    <string name="errorName">Field must be filled</string>
    <string name="name">Name</string>
    <string name="date_death">Date of death</string>
    <string name="died_bn">Died</string>

    <!-- AdapterPerson -->
    <string name="date_birth">Date of Birth:</string>
    <string name="died">Died:</string>

    <!-- AgeCalculator-->
    <string name="age">Age:</string>
    <string name="was">Was:</string>
    <string name="passed">Passed by:</string>
    <string name="left">Until the birthday</string>
    <string name="today">Birthday today.</string>

    <string name="d1">day</string>
    <string name="d2">days</string>
    <string name="d5">days</string>

    <string name="m1">month</string>
    <string name="m2">months</string>
    <string name="m5">months</string>

    <string name="y1">year</string>
    <string name="y2">years</string>
    <string name="y5">years</string>


    <!-- Ошибки ввода inputDate-->
    <string name="error_d0">Day cannot be zero</string>
    <string name="error_31">Days cannot be more than 31</string>
    <string name="error_m0">The month cannot be zero</string>
    <string name="error_12">There can\'t be more than 12 months</string>
    <string name="error_0">Year cannot start with 0</string>
    <string name="error_3">Year cannot start with 3</string>
    <string name="error_date_after">The entered date is after the current one</string>
    <string name="error_other">Incorrect data</string>

    <!-- Ошибки поля даты checkDate-->

    <string name="error_mon_empty">Month not entered</string>
    <string name="error_y4">Year must contain 4 characters</string>
    <string name="error_enter_y">Enter year</string>
    <string name="error_date_death">Date of death before date of birth</string>
    <string name="separator">-</string>

    <!-- TextWatcherDate -->
    <string name="template">XX-XX-XXXX</string>

    <!-- NotesActivity-->
    <string name="input_text">Enter text</string>
    <string name="changes_made">Changes made</string>
    <string name="save_changes">Save changes?</string>
    <string name="yes">Yas</string>
    <string name="no">No</string>

</resources>