<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp"
    android:backgroundTint="@color/item"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp"
    tools:ignore="TextSizeCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="4dp"
        android:paddingBottom="4dp">

        <ImageView
            android:id="@+id/imPerson"
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/todo"
            android:paddingBottom="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            tools:ignore="ImageContrastCheck" />

        <!--        android:src="@drawable/persona"-->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="4dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fmGroup"
            app:layout_constraintStart_toEndOf="@+id/imPerson"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvName"
                style="@style/title"
                android:text="@string/name" />

            <TextView
                android:id="@+id/tvDate"
                style="@style/text"
                android:singleLine="true"
                android:text="@string/date_birth" />

            <TextView
                android:id="@+id/tvDied"
                style="@style/text"
                android:text="@string/died" />

            <TextView
                android:id="@+id/tvAge"
                style="@style/text"
                android:text="@string/age"/>

            <TextView
                android:id="@+id/tvLeft"
                style="@style/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/left" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/fmGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.tera.checkbox.CheckBox
                android:id="@+id/chDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:check_checked="false"
                android:visibility="invisible"
                app:button_checkedColor="#2CD0BD"
                app:button_uncheckedColor="@color/black" />

            <ImageView
                android:id="@+id/imEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:padding="14dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_edit_item" />

            <ImageView
                android:id="@+id/imNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:padding="14dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_edit_note_black" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>