<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_add"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bar"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,RtlSymmetry" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTittle">

        <TextView
            android:id="@+id/tvSelect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/select_photo"
            android:textSize="12sp"
            tools:ignore="TextSizeCheck,TextContrastCheck,VisualLintOverlap" />

        <ImageView
            android:id="@+id/imPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            tools:ignore="ImageContrastCheck" />

    </FrameLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="16dp"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <EditText
            android:id="@+id/edName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapWords"
            tools:ignore="Autofill,DuplicateSpeakableTextCheck,
            TouchTargetSizeCheck,VisualLintTextFieldSize,
            SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvDate"
        style="@style/text_dialog"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/date_birth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emName"
        tools:ignore="HardcodedText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emDate"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="16dp"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDate">

        <EditText
            android:id="@+id/edDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/d_m_y"
            android:inputType="phone"
            tools:ignore="Autofill,DuplicateSpeakableTextCheck,
            HardcodedText,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize,
            SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvDied"
        style="@style/text_dialog"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/date_death"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emDate"
        tools:ignore="HardcodedText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emDied"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="16dp"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDied">

        <EditText
            android:id="@+id/edDied"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/d_m_y"
            android:inputType="phone"
            tools:ignore="Autofill,DuplicateSpeakableTextCheck,
            HardcodedText,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize,
            SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvBnDied"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:gravity="center"
        android:text="@string/died_bn"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvOk"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tvOk"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="OK"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emDied"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toStartOf="@+id/tvOk"
        app:layout_constraintTop_toTopOf="@+id/tvOk"
        tools:ignore="HardcodedText,TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>